--- a/src/ChatUI.form
+++ b/src/ChatUI.form
@@ -22,9 +22,18 @@
         <properties>
           <font name="Sarabun" size="14" style="0"/>
           <text value=""/>
-          <toolTipText value="ระบุคำถามที่ต้องการ"/>
+          <toolTipText value="Text your message"/>
         </properties>
       </component>
+      <vspacer id="49c55">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <minimum-size width="-1" height="30"/>
+            <preferred-size width="-1" height="30"/>
+            <maximum-size width="-1" height="30"/>
+          </grid>
+        </constraints>
+      </vspacer>
       <component id="a54d7" class="javax.swing.JButton" binding="sendButton" default-binding="true">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
@@ -37,25 +46,19 @@
           <text value="Send"/>
         </properties>
       </component>
-      <component id="de38b" class="javax.swing.JTextArea" binding="textArea">
+      <component id="54657" class="javax.swing.JTextPane" binding="textPane">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="50"/>
+          </grid>
         </constraints>
         <properties>
           <editable value="false"/>
+          <focusable value="true"/>
           <font name="Sarabun" size="14" style="0"/>
           <margin top="5" left="5" bottom="5" right="5"/>
         </properties>
       </component>
-      <vspacer id="49c55">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-            <minimum-size width="-1" height="30"/>
-            <preferred-size width="-1" height="30"/>
-            <maximum-size width="-1" height="30"/>
-          </grid>
-        </constraints>
-      </vspacer>
     </children>
   </grid>
 </form>
